@@ -1,3 +1,8 @@
+2010-02-16  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* gdb.base/charset.exp: Use a single regular expression to match
+	show host-charset and show target-charset output.
+
 2010-02-15  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* gdb.base/attach.exp (attach to nonsense is prohibited): Make the
